--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-import streamlit as st
-import pandas as pd
-import numpy as np
+scikit_learn
+folium
+plotly
+plotly-express
+matplotlib
+seaborn
+numpy
+pandas
+matplotlib
+streamlit
+folium
+streamlit_folium
